--- a/index.html
+++ b/index.html
@@ -473,12 +473,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (36.3%)</li>
-                            <li>CSS (37.5%)</li>
-                            <li>HTML (26.2%)</li>
+                            <li>JavaScript (35.6%)</li>
+                            <li>CSS (38.0%)</li>
+                            <li>HTML (26.4%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: March 18th, 2025 12:32:26 PM EST</li>
+                    <li>Last Updated: March 19th, 2025 12:20:06 PM EST</li>
                 </ul>
             </div>
         </div>
@@ -628,7 +628,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">100%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 197</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 198</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -642,7 +642,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $853.98</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 22, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 17, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> WatchOS 11.4 (22T5234f)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> WatchOS 11.4 (22T5244a)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
