--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ s0.parentNode.insertBefore(s1,s0);
         
         <!-- Useful Links Section -->
     <div class="useful-links-section section">
-        <h2 class="section-title">Useful Links</h2>
+        <h2 id="useful-links-header">Useful Links</h2>
         <div class="links-container">
             <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank" class="link-button">Merch Store (Fourthwall)</a>
             <a href="https://discord.gg/NjMtuZYc52" target="_blank" class="link-button">Join the Bus Army Dude's Community Discord Server!</a>
@@ -243,7 +243,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to Spring 2025!</h2>
+            <h2 id="countdown-header">Countdown to Spring 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-years" class="flip-clock">
@@ -305,13 +305,13 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- Calendar Section -->
 <section class="section" data-section-id="events">
     <div class="section-content">
-        <h2 class="section-title">Upcoming Events</h2>
+        <h2 id="business-header">Upcoming Events</h2>
         <div class="events-container" id="eventsContainer"></div>
     </div>
 </section>
 
 <div class="business-info">
-    <h1>Bus Army Dude's Merch Store</h1>
+    <h1 id="business-header">Bus Army Dude's Merch Store</h1>
     <p class="contact-info"><strong>Contact:</strong> <a href="mailto:busarmydude@gmail.com">busarmydude@gmail.com</a></p>    
     <p><strong>Your current timezone:</strong> <span id="user-timezone"></span></p>
     <h2>Business Hours</h2>
@@ -327,7 +327,7 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
         
         <div class="faq-section">
-    <h2>Frequently Asked Questions</h2>
+    <h2 id="faq-header">Frequently Asked Questions</h2>
     <div class="faq-container">
         <!-- Basic Information -->
         <div class="faq-item">
@@ -669,7 +669,7 @@ s0.parentNode.insertBefore(s1,s0);
 
       <!-- Disabilities Section -->
         <div class="disabilities-section section">
-            <h2>Disabilities</h2>
+            <h2 id="disability-header">Disabilities</h2>
             <p>I have the following disabilities:</p>
             <ul>
                 <li><a href="https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd" target="_blank">Autism Spectrum Disorder (ASD)</a></li>
