--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ s0.parentNode.insertBefore(s1,s0);
             <span>Snapchat</span>
         </a>
         <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fab fa-x social-icon"></i>
+            <i class="fa-brands fa-x-twitter"></i>
             <span>X (Twitter)</span>
         </a>
         <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
