--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ s0.parentNode.insertBefore(s1,s0);
             <span>Snapchat</span>
         </a>
         <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-x-twitter social-icon"></i>
             <span>X (Twitter)</span>
         </a>
         <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
-            <i class="fab fa-twitch social-icon"></i>
+            <i class="fab fa-twitch social-icon social-icon"></i>
             <span>Twitch</span>
         </a>
         <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
