--- a/index.html
+++ b/index.html
@@ -123,61 +123,60 @@ s0.parentNode.insertBefore(s1,s0);
     <p>POLITICAL PARTY: Republican</p>
 </div>
         
-       <!-- Social Links Section -->
-<div class="social-links-section">
-    <h2>Connect with Me</h2>
-    <div class="social-links-container">
-        <a href="https://www.tiktok.com/@officalbusarmydude" class="social-button">
-            <i class="fab fa-tiktok social-icon"></i>
-            <span>TikTok</span>
-        </a>
-        <a href="https://www.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-youtube social-icon"></i>
-            <span>YouTube</span>
-        </a>
-        <a href="https://www.snapchat.com/add/calebkritzar" class="social-button">
-            <i class="fab fa-snapchat-ghost social-icon"></i>
-            <span>Snapchat</span>
-        </a>
-        <a href="https://x.com/KritzarRiver" class="social-button">
-            <i class="fa-brands fa-x-twitter social-icon"></i>
-            <span>X (Twitter)</span>
-        </a>
-        <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
-            <i class="fab fa-twitch social-icon social-icon"></i>
-            <span>Twitch</span>
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
-            <i class="fab fa-facebook social-icon"></i>
-            <span>Facebook</span>
-        </a>
-        <a href="https://steamcommunity.com/profiles/76561199283946668" class="social-button">
-            <i class="fab fa-steam social-icon"></i>
-            <span>Steam</span>
-        </a>
-        <a href="https://discord.gg/NjMtuZYc52" class="social-button">
-            <i class="fab fa-discord social-icon"></i>
-            <span>Discord</span>
-        </a>
-        <a href="https://www.instagram.com/busarmydude/" class="social-button">
-            <i class="fab fa-instagram social-icon"></i>
-            <span>Instagram</span>
-        </a>
-        <a href="https://www.threads.net/@busarmydude" class="social-button">
-            <i class="fab fa-threads social-icon"></i>
-            <span>Threads</span>
-        </a>
-        <a href="https://bsky.app/profile/busarmydude.bsky.social" class="social-button">
-            <i class="fa-brands fa-bluesky social-icon"></i>
-            <span>Bluesky</span>
-        </a>
-        <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fa-brands fa-square-youtube social-icon"></i>
-            <span>YouTube Music</span>
-        </a>
+     <!-- Social Links Section -->
+    <div class="social-links-section">
+        <h2>Connect with Me</h2>
+        <div class="social-links-container">
+            <a href="https://www.tiktok.com/@officalbusarmydude" class="social-button">
+                <i class="fab fa-tiktok social-icon"></i>
+                <span>TikTok</span>
+            </a>
+            <a href="https://www.youtube.com/@BusArmyDude" class="social-button">
+                <i class="fab fa-youtube social-icon"></i>
+                <span>YouTube</span>
+            </a>
+            <a href="https://www.snapchat.com/add/calebkritzar" class="social-button">
+                <i class="fab fa-snapchat-ghost social-icon"></i>
+                <span>Snapchat</span>
+            </a>
+            <a href="https://x.com/KritzarRiver" class="social-button">
+                <i class="fab fa-twitter social-icon"></i>
+                <span>X (Twitter)</span>
+            </a>
+            <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
+                <i class="fab fa-twitch social-icon social-icon"></i>
+                <span>Twitch</span>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
+                <i class="fab fa-facebook social-icon"></i>
+                <span>Facebook</span>
+            </a>
+            <a href="https://steamcommunity.com/profiles/76561199283946668" class="social-button">
+                <i class="fab fa-steam social-icon"></i>
+                <span>Steam</span>
+            </a>
+            <a href="https://discord.gg/NjMtuZYc52" class="social-button">
+                <i class="fab fa-discord social-icon"></i>
+                <span>Discord</span>
+            </a>
+            <a href="https://www.instagram.com/busarmydude/" class="social-button">
+                <i class="fab fa-instagram social-icon"></i>
+                <span>Instagram</span>
+            </a>
+            <a href="https://www.threads.net/@busarmydude" class="social-button">
+                <i class="fab fa-threads social-icon"></i>
+                <span>Threads</span>
+            </a>
+            <a href="https://bsky.app/profile/busarmydude.bsky.social" class="social-button">
+                <i class="fab fa-bluesky social-icon"></i>
+                <span>Bluesky</span>
+            </a>
+            <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
+                <i class="fab fa-youtube-square social-icon"></i>
+                <span>YouTube Music</span>
+            </a>
+        </div>
     </div>
-</div>
-
         
         <!-- Current President -->        
         <section id="current-president" class="president-section">
