--- a/index.html
+++ b/index.html
@@ -166,12 +166,8 @@ s0.parentNode.insertBefore(s1,s0);
                 <span>Instagram</span>
             </a>
             <a href="https://www.threads.net/@busarmydude" class="social-button">
-                <i class="fab fa-threads social-icon"></i>
+                <i class="fa-brands fa-threads social-icon"></i>
                 <span>Threads</span>
-            </a>
-            <a href="https://bsky.app/profile/busarmydude.bsky.social" class="social-button">
-                <i class="fab fa-bluesky social-icon"></i>
-                <span>Bluesky</span>
             </a>
             <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
                 <i class="fab fa-youtube-square social-icon"></i>
