--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to Spring 2025!</h2>
+            <h2>Countdown to Summer Solstice 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-years" class="flip-clock">
