--- a/index.html
+++ b/index.html
@@ -187,6 +187,13 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
             </div>
         </section>
+
+<div class="weather-section">
+    <div class="weather-loading">
+        <div class="loading-spinner"></div>
+        <p>Loading weather data...</p>
+    </div>
+</div>
         
              <!-- TikTok Shoutouts Section -->
         <div class="shoutouts-section section">
@@ -729,5 +736,6 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
     <script src="business-hours.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>                
