--- a/index.html
+++ b/index.html
@@ -188,12 +188,13 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </section>
 
-<div class="weather-section">
-    <div class="weather-loading">
-        <div class="loading-spinner"></div>
-        <p>Loading weather data...</p>
-    </div>
-</div>
+        <!-- Weather Section -->
+        <div class="weather-section">
+            <div class="weather-loading">
+                <div class="loading-spinner"></div>
+                <p>Loading weather data...</p>
+            </div>
+        </div>
         
              <!-- TikTok Shoutouts Section -->
         <div class="shoutouts-section section">
