--- a/index.html
+++ b/index.html
@@ -188,13 +188,16 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </section>
 
-        <!-- Weather Section -->
-        <div class="weather-section">
-    <div class="weather-loading">
-        <div class="loading-spinner"></div>
-        <p>Loading weather data...</p>
-    </div>
-</div>
+        <!-- Weather Section Container -->
+        <div class="weather-container">
+            <!-- Weather Section -->
+            <div class="weather-section">
+                <div class="weather-loading">
+                    <div class="loading-spinner"></div>
+                    <p>Loading weather data...</p>
+                </div>
+            </div>
+        </div>
         
              <!-- TikTok Shoutouts Section -->
         <div class="shoutouts-section section">
