--- a/index.html
+++ b/index.html
@@ -193,67 +193,58 @@ s0.parentNode.insertBefore(s1,s0);
 <div class="weather-container">
     <!-- Weather Section -->
     <div class="weather-section">
-        <!-- Loading State (Will be visible while data is being fetched) -->
+        <!-- Loading State -->
         <div class="weather-loading">
             <div class="loading-spinner"></div>
             <p>Loading weather data...</p>
         </div>
 
-        <!-- Weather Content (This will be populated dynamically via JS) -->
+        <!-- Weather Content - This will be populated dynamically via JS -->
         <div class="weather-content">
-            <!-- Weather Header -->
             <div class="weather-header">
                 <div class="location-info">
-                    <!-- Location Name will be dynamically inserted here -->
                     <h2 class="location-name">Location</h2>
-                    <!-- Last Updated timestamp will be inserted here -->
                     <span class="last-updated">Updated: </span>
                 </div>
             </div>
 
             <hr>
 
-            <!-- Weather Primary Section -->
             <div class="weather-primary">
                 <div class="current-temp">
                     <div class="temperature">
-                        <!-- Current temperature and Feels Like will be inserted here -->
                         <span class="temp-value">--°F</span>
                         <span class="feels-like">Feels Like: --°F</span>
                     </div>
                 </div>
-                <!-- Condition Text & Icon (Will be updated dynamically) -->
                 <div class="condition-text">
-                    <!-- Weather condition icon will change based on condition -->
                     <i class="wi wi-na"></i> -- Condition
                 </div>
             </div>
 
             <hr>
 
-            <!-- Weather Details Section -->
             <div class="weather-details">
-                <!-- Wind Speed, Humidity, and Pressure will be populated here -->
-                <div class="detail">
-                    <span class="label">Wind Speed</span><span class="value">-- mph</span>
-                </div>
-                <div class="detail">
-                    <span class="label">Humidity</span><span class="value">-- %</span>
-                </div>
-                <div class="detail">
-                    <span class="label">Pressure</span><span class="value">-- hPa</span>
-                </div>
+                <div class="detail"><span class="label">Wind Speed</span><span class="value">-- mph</span></div>
+                <div class="detail"><span class="label">Humidity</span><span class="value">-- %</span></div>
+                <div class="detail"><span class="label">Pressure</span><span class="value">-- hPa</span></div>
             </div>
         </div>
 
-        <!-- Forecast Section (This will be populated dynamically with forecast data) -->
+        <!-- Forecast Section -->
         <div class="forecast-container">
-            <!-- Forecast for the next days will go here -->
+            <!-- This will be populated dynamically with forecast data -->
         </div>
 
         <!-- Sun & Moon Section -->
         <div class="sun-moon-section">
-            <!-- Sun and Moon rise/set times will be inserted dynamically here -->
+            <!-- This will be populated dynamically with Sun & Moon data -->
+        </div>
+
+        <!-- Location Input Form -->
+        <div class="location-form">
+            <input type="text" id="locationInput" placeholder="Enter location" />
+            <button id="searchLocationButton">Get Weather</button>
         </div>
     </div>
 </div>
