--- a/index.html
+++ b/index.html
@@ -229,17 +229,25 @@ s0.parentNode.insertBefore(s1,s0);
 
                 <!-- Weather Details Section -->
                 <div class="weather-details">
-                    <div class="detail">
-                        <span class="label">Wind Speed</span>
+                    <div class="detail wind-speed">
+                        <span class="label">Wind Speed:</span>
                         <span class="value">-- mph</span>
                     </div>
-                    <div class="detail">
-                        <span class="label">Humidity</span>
+                    <div class="detail humidity">
+                        <span class="label">Humidity:</span>
                         <span class="value">-- %</span>
                     </div>
-                    <div class="detail">
-                        <span class="label">Pressure</span>
+                    <div class="detail pressure">
+                        <span class="label">Pressure:</span>
                         <span class="value">-- hPa</span>
+                    </div>
+                    <div class="detail precipitation">
+                        <span class="label">Precipitation:</span>
+                        <span class="value">-- in</span>
+                    </div>
+                    <div class="detail air-quality">
+                        <span class="label">Air Quality:</span>
+                        <span class="value">--</span>
                     </div>
                 </div>
             </div>
