--- a/index.html
+++ b/index.html
@@ -246,8 +246,11 @@ s0.parentNode.insertBefore(s1,s0);
                         <span class="value">-- in</span>
                     </div>
                     <div class="detail air-quality">
-                        <span class="label">Air Quality:</span>
-                        <span class="value">--</span>
+                      <span class="label">Air Quality:</span>
+                      <span class="value">Loading...</span>
+                    </div>
+                    <div class="air-quality-details">
+                      <!-- This will be dynamically populated -->
                     </div>
                 </div>
             </div>
