--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ s0.parentNode.insertBefore(s1,s0);
 
             <!-- Location Input Section -->
             <div class="location-input-container">
-                <input type="text" id="locationInput" placeholder="Enter City, Zip Code Or State location" />
+                <input type="text" id="locationInput" placeholder="Search City or Zip Code" />
                 <button id="searchLocationButton">Get Weather</button>
             </div>
         </div>
