--- a/index.html
+++ b/index.html
@@ -267,8 +267,11 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Location Input Section -->
         <div class="location-input-container">
-            <input type="text" id="locationInput" placeholder="Search City or Zip Code" />
-            <button id="searchLocationButton">Get Weather</button>
+            <input id="locationInput" type="text" placeholder="Enter location">
+            <button id="searchLocationButton">
+                Get Weather
+            </button>
+            <div class="error-icon" title="Error">!</div>
         </div>
     </div>
 </div>
