--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@ s0.parentNode.insertBefore(s1,s0);
             <p>Loading weather data...</p>
         </div>
 
+        <!-- Weather Alerts Section -->
+        <div class="weather-alerts">
+            <h3>Weather Alerts</h3>
+            <ul id="weatherAlertsList">
+                <!-- Dynamically populated alerts will go here -->
+            </ul>
+        </div>
+        
         <!-- Weather Content - This will be populated dynamically via JS -->
         <div class="weather-content">
             <!-- Header Section -->
