--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Location Input Section -->
         <div class="location-input-container">
-            <input id="locationInput" type="text" placeholder="Enter location">
+            <input type="text" class="search-input" placeholder="Enter a location" />
             <button id="searchLocationButton">
                 Get Weather
             </button>
