--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ s0.parentNode.insertBefore(s1,s0);
             <h3 class="weather-alerts-title">Weather Alerts</h3>
             <ul id="weatherAlertsList">
                 <!-- Dynamically populated alerts will go here -->
-                <li>No weather alerts at the moment.</li>
+                <li>No weather alerts currently active.</li>
             </ul>
         </div>
         
