--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Location Input Section with Button -->
         <div class="location-input-container">
-            <input type="text" class="search-input" placeholder="Enter a location" />
-            <button class="search-button" onclick="fetchWeatherData()">Get Weather</button>
+            <input type="text" class="search-input" id="location-input" placeholder="Enter a location" />
+            <button class="search-button" id="location-submit">Get Weather</button>
         </div>
     </div>
 </div>
