--- a/index.html
+++ b/index.html
@@ -271,9 +271,8 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Sun & Moon Section -->
         <div class="sun-moon-section">
-            <!-- Dynamically populated sun & moon info goes here -->
-            <div class="sunrise">Loading sunrise time...</div>
-            <div class="moonrise">Loading moonrise time...</div>
+          <div class="sunrise"></div>
+          <div class="sunset"></div>
         </div>
 
         <!-- Location Input Section with Button -->
