--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <li>No weather alerts currently active.</li>
             </ul>
         </div>
-        
+
         <!-- Weather Content - This will be populated dynamically via JS -->
         <div class="weather-content" style="display: none;">
             <!-- Header Section -->
@@ -277,7 +277,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Location Input Section with Button -->
         <div class="location-input-container">
-            <input type="text" class="search-input" id="location-input" placeholder="Enter a location" />
+            <input type="text" class="search-input" id="location-input" placeholder="Search City or Zip Code" />
             <button class="search-button" id="location-submit">Get Weather</button>
         </div>
     </div>
