--- a/index.html
+++ b/index.html
@@ -269,10 +269,11 @@ s0.parentNode.insertBefore(s1,s0);
             <!-- Dynamically populated forecast goes here -->
         </div>
 
-        <!-- Sun & Moon Section -->
         <div class="sun-moon-section">
-          <div class="sunrise"></div>
-          <div class="sunset"></div>
+            <div class="sunrise">Sunrise: --</div>
+            <div class="sunset">Sunset: --</div>
+            <div class="moonrise">Moonrise: --</div>
+            <div class="moonset">Moonset: --</div>
         </div>
 
         <!-- Location Input Section with Button -->
