--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@ s0.parentNode.insertBefore(s1,s0);
             <!-- Dynamically populated forecast goes here -->
         </div>
 
-        <div class="sun-moon-section">
-            <div class="sunrise">Sunrise: --</div>
-            <div class="sunset">Sunset: --</div>
-            <div class="moonrise">Moonrise: --</div>
-            <div class="moonset">Moonset: --</div>
+        <div class="sun-moon-info">
+          <div>🌅 Sunrise: --</div>
+          <div>🌇 Sunset: --</div>
+          <div>🌕 Moonrise: --</div>
+          <div>🌑 Moonset: --</div>
         </div>
 
         <!-- Location Input Section with Button -->
