--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="weather-alerts">
           <h3 class="weather-alerts-title">Weather Alerts</h3>
           <ul id="weatherAlertsList">
+            <!-- Alerts will be dynamically populated here -->
             <li>No weather alerts currently active.</li>
           </ul>
         </div>
-
 
         <!-- Weather Content - This will be populated dynamically via JS -->
         <div class="weather-content" style="display: none;">
