--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@ s0.parentNode.insertBefore(s1,s0);
         <span id="city-name">City</span>, <span id="region">Region</span>
         <span id="weather-time">Time</span>
     </div>
+    <select id="unit-select">
+        <option value="metric">Celsius (°C)</option>
+        <option value="imperial">Fahrenheit (°F)</option>
+    </select>
     <div class="weather-info">
         <span id="temperature">--°C</span>
         <span id="weather-condition">Condition</span>
