--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ s0.parentNode.insertBefore(s1,s0);
         <span id="weather-time">Time</span>
     </div>
     <select id="unit-select">
-        <option value="metric">Celsius (°C)</option>
-        <option value="imperial">Fahrenheit (°F)</option>
+        <option value="Celsius">Celsius (°C)</option>
+        <option value="Fahrenheit">Fahrenheit (°F)</option>
     </select>
     <div class="weather-info">
         <span id="temperature">--°C</span>
