--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="weather-detail-container">
             <p id="last-update"><strong>Last Update:</strong> --</p>
         </div>
+        <div id="seven-day-outlook" class="seven-day-outlook">
+            <!-- Each day's forecast will be populated dynamically -->
+        </div>
         <div class="weather-detail-container">
             <p id="location-coordinates"><strong>Coordinates:</strong> --</p>
         </div>
