--- a/admin.html
+++ b/admin.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="admin-style.css">
 </head>
 <body>
-    <!-- Login Section -->
-    <div id="login-section" class="login-section">
-        <div class="login-container">
-            <h1><i class="fas fa-lock"></i> Admin Portal</h1>
-            <p class="login-subtitle">Welcome back, Bus Army Dude!</p>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" value="BusArmyDude" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required>
-                </div>
-                <button type="submit" class="btn-primary">
-                    <i class="fas fa-sign-in-alt"></i> Login
-                </button>
-            </form>
-        </div>
+   <!-- Update just the login form part -->
+<div id="login-section" class="login-section">
+    <div class="login-container">
+        <h1><i class="fas fa-lock"></i> Admin Portal</h1>
+        <p class="login-subtitle">Welcome back, Bus Army Dude!</p>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" value="BusArmyDude" readonly>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" required>
+            </div>
+            <button type="submit" class="btn-primary">
+                <i class="fas fa-sign-in-alt"></i> Login
+            </button>
+        </form>
     </div>
+</div>
 
     <!-- Admin Dashboard -->
     <div id="admin-panel" class="admin-panel" style="display: none;">
