--- a/index.html
+++ b/index.html
@@ -810,5 +810,6 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="creatorshoutouts.js"></script>
     <script src="business-hours.js"></script>
     <script src="main.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>                
