--- a/settings.html
+++ b/settings.html
@@ -169,5 +169,6 @@
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="ai-chatbot.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
